@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/snapshot_target.py,v 1.13 2005/12/05 18:13:12 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/snapshot_target.py,v 1.14 2005/12/13 20:32:43 rocket Exp $
 
 """
 Builder class for snapshots.
@@ -22,6 +22,13 @@ class snapshot_target(generic_target):
 		self.settings["snapshot_path"]=normpath(st+"/snapshots/portage-"+self.settings["version_stamp"]\
 			+".tar.bz2")
 		self.settings["tmp_path"]=normpath(st+"/tmp/"+self.settings["target_subpath"])
+		if self.settings.has_key("portdir_overlay"):
+			print "\nWarning!!!!"
+			print "\tThis feature is deprecated no overlay will be added to the snapshot."
+			print "\tIf you need an overlay feature please use portdir_overlay in the other spec files"
+			print "\tOtherwise add your files to the normal snapshot and redigest .. you should know what"
+			print "\t\tto do."
+			print "\tThis was removed due to digesting issues that are incompatible with portage."
 
 	def setup(self):
 		x=normpath(self.settings["storedir"]+"/snapshots")
@@ -43,11 +50,11 @@ class snapshot_target(generic_target):
 		cmd("rsync -a --delete --exclude /packages/ --exclude /distfiles/ --exclude /local/ --exclude CVS/ "+\
 			self.settings["portdir"]+"/ "+mytmp+"/portage/","Snapshot failure",env=self.env)
 		
-		if self.settings.has_key("portdir_overlay"):
-			print "Adding Portage overlay to the snapshot..."
-			cmd("rsync -a --exclude /packages/ --exclude /distfiles/ --exclude /local/ --exclude CVS/ "+\
-				self.settings["portdir_overlay"]+"/ "+mytmp+"/portage/","Snapshot/ overlay addition failure",\
-				env=self.env)
+		#if self.settings.has_key("portdir_overlay"):
+			#print "Adding Portage overlay to the snapshot..."
+			#cmd("rsync -a --exclude /packages/ --exclude /distfiles/ --exclude /local/ --exclude CVS/ "+\
+			#	self.settings["portdir_overlay"]+"/ "+mytmp+"/portage/","Snapshot/ overlay addition failure",\
+			#	env=self.env)
 			
 		print "Compressing Portage snapshot tarball..."
 		cmd("tar cjf "+self.settings["snapshot_path"]+" -C "+mytmp+" portage",\
