@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/stage1_target.py,v 1.17 2005/12/13 19:31:13 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/stage1_target.py,v 1.18 2005/12/13 20:32:43 rocket Exp $
 
 """
 Builder class for a stage1 installation tarball build.
@@ -28,6 +28,12 @@ class stage1_target(generic_stage_target):
 		generic_stage_target.set_cleanables(self)
 		self.settings["cleanables"].extend(["/usr/share/gettext","/usr/lib/python2.2/test", "/usr/lib/python2.2/encodings","/usr/lib/python2.2/email", "/usr/lib/python2.2/lib-tk","/usr/share/zoneinfo"])
 
+	def set_portage_overlay(self):
+		generic_stage_target.set_portage_overlay(self)
+		print "\nWARNING !!!!!"
+		print "\tUsing an overlay for earlier stages could cause build issues."
+		print "\tIf you break it, you buy it. Don't complain to us about it."
+		print "\tDont say we did not warn you\n"
 def register(foo):
 	foo.update({"stage1":stage1_target})
 	return foo
